infra/k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: taskforge
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: piyushsachdv/worker:daf5ca5bae06eb3b79c0094109786c530a71ddd8
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          livenessProbe:
            exec:
              command:
                - python
                - -c
                - import sys; sys.exit(0)
            initialDelaySeconds: 10
            periodSeconds: 10
